# volk

./: LICENSE  README.md  flake.nix  meson.build
src/: meson.build
src/client/: main.vala  meson.build  volume_proxy.vala
src/service/: main.vala  meson.build  volume_applet.vala  volume_service.vala  volume_state.vala
vapi/: Makefile  wireplumber-0.5.vapi
vapi/gir/: Wp-0.5.gir
vapi/metadata/: Wp-0.5-custom.vala  Wp-0.5.metadata
